[gd_scene load_steps=4 format=3 uid="uid://b7tlpyvmlvvbn"]

[ext_resource type="Texture2D" uid="uid://b5n65qtj2u2do" path="res://Assets/Sprites/ufoGreen.png" id="1_6why1"]
[ext_resource type="Script" path="res://Scripts/enemy_ufo.gd" id="1_u5ddo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gaiir"]
radius = 46.1736

[node name="enemyUFO" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_u5ddo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6why1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gaiir")

[node name="gunFire" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="gunOne" type="Marker2D" parent="."]
position = Vector2(0, 58)

[node name="gunTwo" type="Marker2D" parent="."]
position = Vector2(0, -56)

[connection signal="timeout" from="gunFire" to="." method="_on_gun_fire_timeout"]
